--- a/app/src/main/res/layout/activity_server.xml
+++ b/app/src/main/res/layout/activity_server.xml
@@ -19,7 +19,8 @@
             android:id="@+id/textView1"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="Server is running!" />
+            android:text="Server is running!"
+            android:textSize="24sp" />
 
         <!--<Button-->
             <!--android:id="@+id/button1"-->
